[package]
authors = { workspace = true }
description = "contains some utilities for logging and tracing"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-logging"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_logging"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
