[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "picomint-profiler"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "picomint-profiler"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true }
iroh-mdns-address-lookup = { workspace = true }
lightning-invoice = { workspace = true }
picomint-client = { workspace = true }
picomint-core = { workspace = true }
picomint-eventlog = { workspace = true }
picomint-redb = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
