[package]
authors = { workspace = true }
description = "Shared types for picomint-server admin CLI"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-server-cli-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true }
picomint-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
